--- a/Proyecto_Comisaria/src/vistas/MultasIntroducir.form
+++ b/Proyecto_Comisaria/src/vistas/MultasIntroducir.form
@@ -37,9 +37,9 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="DescripcionField" min="-2" pref="302" max="-2" attributes="0"/>
-                          <Component id="TipoCombox" min="-2" pref="196" max="-2" attributes="0"/>
                           <Component id="NIFfield" min="-2" pref="196" max="-2" attributes="0"/>
                           <Component id="idMulta" alignment="0" min="-2" pref="68" max="-2" attributes="0"/>
+                          <Component id="TipoCombox" alignment="0" min="-2" pref="241" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="48" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
@@ -197,12 +197,7 @@
     <Component class="javax.swing.JComboBox" name="TipoCombox">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <Events>
